--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -23,31 +23,32 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #393939;
-$examples-bg: #393939;
-$code-bg: #292929;
-$code-annotation-bg: #1c1c1c;
-$nav-subitem-bg: #262626;
-$nav-active-bg: #2467af;
-$lang-select-border: #000;
-$lang-select-bg: #222;
-$lang-select-active-bg: $examples-bg; // feel free to change this to blue or something
-$lang-select-pressed-bg: #111; // color of language tab bg when mouse is pressed
-$main-bg: #eaf2f6;
-$aside-notice-bg: #8fbcd4;
-$aside-warning-bg: #c97a7e;
-$aside-success-bg: #6ac174;
-$search-notice-bg: #c97a7e;
+$nav-bg: #333;                 // #333333;
+$examples-bg: #333;            // #393939;
+$code-bg: #444;                // #292929;
+$code-annotation-bg: #F2F7F7;  // #1c1c1c;
+$nav-subitem-bg: #444;         // #262626;
+$nav-active-bg: #00b3b7;       // #00b3b7;
+$lang-select-border: #333;     // #000;
+$lang-select-bg: #222;         // #cccccc;
+$lang-select-active-bg: #333;  // $examples-bg;
+$lang-select-pressed-bg: #333; // #111;
+$main-bg: #fff;                // #eeeeee;
+$block-border: #CDD4D3;
+$aside-notice-bg: #F2F7F7;     // #8fbcd4;
+$aside-warning-bg: #0ff;       // #c97a7e;
+$aside-success-bg: #fff;       // #6ac174;
+$search-notice-bg: #fff;       // #c97a7e;
 
 
 // TEXT COLORS
 ////////////////////
-$main-text: #333; // main content text color
-$nav-text: #fff;
-$nav-active-text: #fff;
-$lang-select-text: #fff; // color of unselected language tab text
-$lang-select-active-text: #fff; // color of selected language tab text
-$lang-select-pressed-text: #fff; // color of language tab text when mouse is pressed
+$main-text: #333;                // #333; // main content text color
+$nav-text: #fff;                 // #fff;
+$nav-active-text: #fff;          // #fff;
+$lang-select-text: #fff;         // #fff; // color of unselected language tab text
+$lang-select-active-text: #fff;  // #fff; // color of selected language tab text
+$lang-select-pressed-text: #fff; // #fff; // color of language tab text when mouse is pressed
 
 
 // SIZES
@@ -60,7 +61,7 @@ $nav-padding: 15px; // padding to left and right of navbar
 $nav-v-padding: 10px; // padding used vertically around search boxes and results
 $nav-indent: 10px; // extra padding for ToC subitems
 $code-annotation-padding: 13px; // padding inside code annotations
-$h1-margin-bottom: 21px; // padding under the largest header tags
+$h1-margin-bottom: 10px; // padding under the largest header tags
 $tablet-width: 930px; // min width before reverting to tablet size
 $phone-width: $tablet-width - $nav-width; // min width before reverting to mobile size
 
@@ -68,13 +69,13 @@ $phone-width: $tablet-width - $nav-width; // min width before reverting to mobil
 // FONTS
 ////////////////////
 %default-font {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Verdana, Arial, sans-serif;
   font-size: 13px;
 }
 
 %header-font {
   @extend %default-font;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 %code-font {
@@ -86,11 +87,11 @@ $phone-width: $tablet-width - $nav-width; // min width before reverting to mobil
 
 // OTHER
 ////////////////////
-$nav-active-shadow: #000;
-$nav-footer-border-color: #666;
-$nav-embossed-border-top: #000;
-$nav-embossed-border-bottom: #939393;
-$main-embossed-text-shadow: 0px 1px 0px #fff;
+$nav-active-shadow: none;
+$nav-footer-border-color: none;
+$nav-embossed-border-top: none;
+$nav-embossed-border-bottom: none;
+$main-embossed-text-shadow: none;
 $search-box-border-color: #666;
 
 
