--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -48,23 +48,23 @@ html, body {
   width: 20px;
 }
 
-@mixin embossed-bg {
-  @include background(
-    linear-gradient(top,
-                    rgba(#000, 0.2),
-                    rgba(#000, 0) 8px),
-    linear-gradient(bottom,
-                    rgba(#000, 0.2),
-                    rgba(#000, 0) 8px),
-    linear-gradient(top,
-                    rgba($nav-embossed-border-top, 1),
-                    rgba($nav-embossed-border-top, 0) 1.5px),
-    linear-gradient(bottom,
-                    rgba($nav-embossed-border-bottom, 1),
-                    rgba($nav-embossed-border-bottom, 0) 1.5px),
-    $nav-subitem-bg
-  );
-}
+// @mixin embossed-bg {
+//   @include background(
+//     linear-gradient(top,
+//                     rgba(#000, 0.2),
+//                     rgba(#000, 0) 8px),
+//     linear-gradient(bottom,
+//                     rgba(#000, 0.2),
+//                     rgba(#000, 0) 8px),
+//     linear-gradient(top,
+//                     rgba($nav-embossed-border-top, 1),
+//                     rgba($nav-embossed-border-top, 0) 1.5px),
+//     linear-gradient(bottom,
+//                     rgba($nav-embossed-border-bottom, 1),
+//                     rgba($nav-embossed-border-bottom, 0) 1.5px),
+//     $nav-subitem-bg
+//   );
+// }
 
 .tocify-wrapper {
   @include transition(left ease-in-out 0.3s);
@@ -78,7 +78,7 @@ html, body {
   width: $nav-width;
   background-color: $nav-bg;
   font-size: 13px;
-  font-weight: bold;
+  // font-weight: bold;
 
   // language selector for mobile devices
   .lang-selector {
@@ -137,7 +137,7 @@ html, body {
       margin-bottom: 1em;
     }
 
-    @include embossed-bg;
+    // @include embossed-bg;
 
     li {
       margin: 1em $nav-padding;
@@ -199,7 +199,7 @@ html, body {
     }
 
     // for embossed look:
-    @include embossed-bg;
+    // @include embossed-bg;
     &>li:last-child {
       box-shadow: none; // otherwise it'll overflow out of the subheader
     }
@@ -208,7 +208,7 @@ html, body {
   .toc-footer {
     padding: 1em 0;
     margin-top: 1em;
-    border-top: 1px dashed $nav-footer-border-color;
+    border: none;
 
     li,a {
       color: $nav-text;
@@ -247,7 +247,7 @@ html, body {
   z-index: 100;
   color: #000;
   text-decoration: none;
-  font-weight: bold;
+  // font-weight: bold;
   opacity: 0.7;
   line-height: 16px;
   img {
@@ -299,7 +299,7 @@ html, body {
 .lang-selector {
   background-color: $lang-select-bg;
   width: 100%;
-  font-weight: bold;
+  // font-weight: bold;
   a {
     display: block;
     float:left;
@@ -336,6 +336,8 @@ html, body {
   // to place content above the dark box
   position: relative;
   z-index: 30;
+  
+  padding-bottom: 100px;
 
   &:after {
     content: '';
@@ -357,6 +359,12 @@ html, body {
     padding-left: $main-padding + 15px;
   }
 
+  &>p>a {
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px solid #00b3b7;
+  }
+
   // the div is the tocify hidden div for placeholding stuff
   &>h1, &>h2, &>div {
     clear:both;
@@ -365,15 +373,13 @@ html, body {
   h1 {
     @extend %header-font;
     font-size: 30px;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    border-bottom: 1px solid #ccc;
+
     margin-bottom: $h1-margin-bottom;
-    margin-top: 2em;
-    border-top: 1px solid #ddd;
-    @include background-image(
-      linear-gradient(top, #fff, #f9f9f9)
-    );
+    margin-top: $h1-margin-bottom * 6;
+
+    padding-bottom: $h1-margin-bottom;
+    
+    border-bottom: 1px solid $block-border;
   }
 
   h1:first-child, div:first-child + h1 {
@@ -384,14 +390,13 @@ html, body {
   h2 {
     @extend %header-font;
     font-size: 20px;
-    margin-top: 4em;
-    margin-bottom: 0;
-    border-top: 1px solid #ccc;
-    padding-top: 1.2em;
-    padding-bottom: 1.2em;
-    @include background-image(
-      linear-gradient(top, rgba(#fff,0.4), rgba(#fff, 0))
-    );
+
+    margin-top: $h1-margin-bottom * 4;
+    margin-bottom: $h1-margin-bottom / 2;
+    
+    padding-bottom: $h1-margin-bottom / 2;
+    
+    border-bottom: 1px solid $block-border;
   }
 
   // h2s right after h1s should bump right up
@@ -403,10 +408,11 @@ html, body {
 
   h3, h4, h5, h6 {
     @extend %header-font;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: bold;
     margin-top: 2.5em;
     margin-bottom: 0.8em;
-    text-transform: uppercase;
+    // text-transform: uppercase;
   }
 
   h4, h5, h6 {
@@ -452,7 +458,7 @@ html, body {
   }
 
   dt {
-    font-weight: bold;
+    // font-weight: bold;
   }
 
   dd {
@@ -470,7 +476,7 @@ html, body {
 
   code {
     background-color: rgba(0,0,0,0.05);
-    padding: 3px;
+    padding: 3px 6px;
     border-radius: 3px;
     @extend %break-words;
     @extend %code-font;
@@ -484,20 +490,22 @@ html, body {
   aside {
     padding-top: 1em;
     padding-bottom: 1em;
-    @include text-shadow(0 1px 0 lighten($aside-notice-bg, 15%));
+    
     margin-top: 1.5em;
     margin-bottom: 1.5em;
+    
     background: $aside-notice-bg;
+    border-top: 1px solid $block-border;
+    border-bottom: 1px solid $block-border;
+    
     line-height: 1.6;
 
     &.warning {
       background-color: $aside-warning-bg;
-      @include text-shadow(0 1px 0 lighten($aside-warning-bg, 15%));
     }
 
     &.success {
       background-color: $aside-success-bg;
-      @include text-shadow(0 1px 0 lighten($aside-success-bg, 15%));
     }
   }
 
@@ -547,7 +555,7 @@ html, body {
     clear:right;
 
     @include box-sizing(border-box);
-    @include text-shadow(0px 1px 2px rgba(0,0,0,0.4));
+    // @include text-shadow(0px 1px 2px rgba(0,0,0,0.4));
 
     @extend %right-col;
 
@@ -556,7 +564,7 @@ html, body {
     a {
       color: #fff;
       text-decoration: none;
-      border-bottom: dashed 1px #ccc;
+      border-bottom: solid 1px #ccc;
     }
   }
 
@@ -567,11 +575,11 @@ html, body {
   blockquote {
     &>p {
       background-color: $code-annotation-bg;
-      border-radius: 5px;
+      border-radius: 3px;
       padding: $code-annotation-padding;
-      color: #ccc;
-      border-top: 1px solid #000;
-      border-bottom: 1px solid #404040;
+      color: $main-text;
+      // border-top: 1px solid #000;
+      // border-bottom: 1px solid #404040;
     }
   }
 }
