--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -359,7 +359,7 @@ html, body {
     padding-left: $main-padding + 15px;
   }
 
-  &>p>a {
+  &>p>a, td>a {
     color: #000;
     text-decoration: none;
     border-bottom: 1px solid #00b3b7;
