--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,7 @@ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 License for the specific language governing permissions and limitations
 under the License.
 %>
+<%= favicon_tag 'images/favicon.png' %>
 <% language_tabs = current_page.data.language_tabs %>
 <!doctype html>
 <html>
